package old.MODEL;

import old.MODEL.entity.Player;

public class GameModel {
    // ALL THE GAME MODEL STAFF HERE
    // world map , entity, combat, ai, events ...

   public Player player = new Player();


}
