package main.CONFIG;

import org.w3c.dom.Document;
import org.w3c.dom.Element;
import org.w3c.dom.Node;
import org.w3c.dom.NodeList;

import java.awt.Color;
import java.util.ArrayList;
import java.io.InputStream;

import javax.xml.parsers.DocumentBuilder;
import javax.xml.parsers.DocumentBuilderFactory;

/**
 * GameConfig
 * this class is used to load the game configuration from the XML file or static constants
 *
 * MAP_PATH: xml file generated by Tiled that MUST be in: "res/maps/..."
 */
//----------------------------------------------------------------------------------------------------------------------
public final class GameConfig {

    //RESOURCES PATH
    private final String MAP_PATH;
    private final String TILESET_PATH;
    //-------------------------------------------------------------

    //STRING TAG
    private static final String ENTITY_GROUP_NAME = "entity";
    private static final String PLAYER_NAME = "player";
    private static final String MONK_NAME = "monk";
    private static final String TNT_NAME = "TNT_spawnPoint";
    private static final String DYNAMITE_NAME = "Dynamite_spawnPoint";
    private static final String START_LAYER_PROP = "StartLayer";
    private static final String TORCH_NAME = "Torch_spawnPoint";

    private static final String TREE_TAG_03 = "trees_03";
    private static final String TREE_TAG_02 = "trees_02";
    private static final String TREE_TAG_01 = "trees_01";

    private static final String CASTLE_TAG = "castle";
    private static final String TOWER_TAG = "tower";
    private static final String GOLDMINE_TAG = "GoldMine";
    private static final String GOBLIN_HOME_TAG = "Goblin_Home";
    //-------------------------------------------------------------

    // CONFIG
    private final ScreenConfig screenConfig;
    private final MapConfig mapConfig;
    private final EntityConfig entityConfig;
    private final ObjConfig ObjConfig;
    private final UIConfig UIConfig;
    //-------------------------------------------------------------

    //UTIL
    private Document mapDoc;
    private Document tilesetDoc;
    //-------------------------------------------------------------

    /**
     * GameConfig Constructor
     */
    //-------------------------------------------------------------
    public GameConfig(String mapFileName, String tilesetFileName) {

        MAP_PATH = "res/maps/" + mapFileName;
        TILESET_PATH = "res/tiles/" + tilesetFileName;

        //load the xml file as a document to fetch the data
        this.mapDoc = loadXMLDoc(MAP_PATH);
        if (mapDoc == null) {
            throw new IllegalStateException("Impossible to load the map: " + MAP_PATH);
        }

        this.tilesetDoc = loadXMLDoc(TILESET_PATH);
        if (tilesetDoc == null) {
            throw new IllegalStateException("Impossible to load the tileset: " + MAP_PATH);
        }

        //get all the data from the xml file
        int TILE_SIZE = Integer.parseInt(mapDoc.getDocumentElement().getAttribute("tilewidth"));
        int MAX_WORLD_COL = Integer.parseInt(mapDoc.getDocumentElement().getAttribute("width"));
        int MAX_WORLD_ROW = Integer.parseInt(mapDoc.getDocumentElement().getAttribute("height"));
        Color GAME_BG_COLOR = Color.decode(mapDoc.getDocumentElement().getAttribute("backgroundcolor"));

        //load the entity spawns
        SpawnPoint playerSpawnPoint = loadEntitySpawns(PLAYER_NAME).get(0);
        SpawnPoint monkSpawnPoint = loadEntitySpawns(MONK_NAME).get(0);
        ArrayList<SpawnPoint> tntSpawPoint = loadEntitySpawns(TNT_NAME);
        ArrayList<SpawnPoint> dynamiteSpawnPoint = loadEntitySpawns(DYNAMITE_NAME);
        ArrayList<SpawnPoint> torchSpawnPoint = loadEntitySpawns(TORCH_NAME);

        //load the tree spawns
        ArrayList<SpawnPoint> treeSpawns03 = loadOBJSpawns(TREE_TAG_03, 3);
        ArrayList<SpawnPoint> treeSpawns02 = loadOBJSpawns(TREE_TAG_02, 2);
        ArrayList<SpawnPoint> treeSpawns01 = loadOBJSpawns(TREE_TAG_01, 1);

        //load the building spawns
        ArrayList<SpawnPoint> castleSpawns = loadOBJSpawns(CASTLE_TAG, 3);
        ArrayList<SpawnPoint> towerSpawns = loadOBJSpawns(TOWER_TAG, 1);
        ArrayList<SpawnPoint> goldMineSpawns = loadOBJSpawns(GOLDMINE_TAG, 1);
        ArrayList<SpawnPoint> goblinHomeSpawns = loadOBJSpawns(GOBLIN_HOME_TAG, 2);

        //create the config
        this.screenConfig = new ScreenConfig(TILE_SIZE, GAME_BG_COLOR);
        this.mapConfig = new MapConfig(TILE_SIZE, MAX_WORLD_COL, MAX_WORLD_ROW);
        this.entityConfig = new EntityConfig(screenConfig, playerSpawnPoint, monkSpawnPoint, tntSpawPoint, dynamiteSpawnPoint, torchSpawnPoint);
        this.ObjConfig = new ObjConfig(
                TREE_TAG_03,
                TREE_TAG_02,
                TREE_TAG_01,
                CASTLE_TAG,
                TOWER_TAG,
                GOLDMINE_TAG,
                GOBLIN_HOME_TAG,
                treeSpawns03,
                treeSpawns02,
                treeSpawns01,
                castleSpawns,
                towerSpawns,
                goldMineSpawns,
                goblinHomeSpawns
        );
        this.UIConfig = new UIConfig();
    }//end constructor
    //-------------------------------------------------------------


    /**
     * UTILITY METODH Load an XML document from the specified path.
     */
    //-------------------------------------------------------------
    private Document loadXMLDoc(String path) {
        try (InputStream is = getClass().getClassLoader().getResourceAsStream(path)) {
            if (is == null) {
                throw new IllegalArgumentException("Resource not found: " + path);
            }
            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
            DocumentBuilder builder = factory.newDocumentBuilder();
            Document doc = builder.parse(is);
            doc.getDocumentElement().normalize();
            return doc;
        } catch (Exception e) {
            throw new RuntimeException("Error while parsing XML from: " + path, e);
        }
    }
    //-------------------------------------------------------------

    /**
     * UTILITY METODH Load the entity spawns of the entity from the map document
     */
    //-------------------------------------------------------------
    private ArrayList<SpawnPoint> loadEntitySpawns(String EntityName) {
        ArrayList<SpawnPoint> spawns = new ArrayList<>();
        NodeList entityGroupList = loadElementGroup(ENTITY_GROUP_NAME);
        for (int i = 0; i < entityGroupList.getLength(); i++) {
            Element obj = (Element) entityGroupList.item(i);
            if (EntityName.equalsIgnoreCase(obj.getAttribute("name"))){

                int x = (int) Math.round(Double.parseDouble(obj.getAttribute("x")));
                int y = (int) Math.round(Double.parseDouble(obj.getAttribute("y")));
                int startLayer = Integer.parseInt(getPropertyValue(obj, START_LAYER_PROP));

                spawns.add(new SpawnPoint(x,y,startLayer));

            }
        }
        return spawns;
    }
    //-------------------------------------------------------------

    /**
     * UTILITY METODH Load the entity spawns of the OBJ from the map document
     */
    //-------------------------------------------------------------
    private ArrayList<SpawnPoint> loadOBJSpawns(String OBJ_GropupName, int startLayer) {

        ArrayList<SpawnPoint> spawns = new ArrayList<>();
        NodeList objects = loadElementGroup(OBJ_GropupName);
        if (objects == null) {
            return spawns;
        }
        for (int j = 0; j < objects.getLength(); j++) {
            Node node = objects.item(j);
            if (node.getNodeType() != Node.ELEMENT_NODE) continue;

            Element obj = (Element) node;
            if (!obj.hasAttribute("gid")) continue;
            int height = (int) Math.round(Double.parseDouble(obj.getAttribute("height")));

            double x = Double.parseDouble(obj.getAttribute("x"));
            double y = Double.parseDouble(obj.getAttribute("y"));

            int worldX = (int) Math.round(x);
            int worldY = (int) Math.round(y - height);
            spawns.add(new SpawnPoint(worldX,worldY,startLayer));

        }
        return spawns;
    }
    //-------------------------------------------------------------

    /**
     *UTILITY METODH used to get the nodelist of an element group
     */
    //-------------------------------------------------------------
    private NodeList loadElementGroup(String elementGroupName){
        NodeList objects = null;
        NodeList groups = mapDoc.getElementsByTagName("objectgroup");

        for (int g = 0; g < groups.getLength(); g++) {
            Node groupNode = groups.item(g);

            if (groupNode.getNodeType() == Node.ELEMENT_NODE) {
                Element group = (Element) groupNode;

                // target group find
                if (elementGroupName.equalsIgnoreCase(group.getAttribute("name"))) {
                    objects = group.getElementsByTagName("object");
                }
            }
        }
        return objects;
    }
    //-------------------------------------------------------------
    /**
     *UTILITY METODH used to get the value of a property from an object element
     */
    //-------------------------------------------------------------
    private static String getPropertyValue(Element objectElement, String propertyName) {
        NodeList properties = objectElement.getElementsByTagName("property");

        for (int i = 0; i < properties.getLength(); i++) {
            Element property = (Element) properties.item(i);
            String currentPropertyName = property.getAttribute("name");

            if (propertyName.equalsIgnoreCase(currentPropertyName)) {
                return property.getAttribute("value");
            }
        }

        return "";
    }
    //-------------------------------------------------------------

    private record OBJ_dim(int width, int height){};

    //GETTER
    //-------------------------------------------------------------
    public ScreenConfig screenConfig() {
        return screenConfig;
    }
    public MapConfig mapConfig() {
        return mapConfig;
    }
    public EntityConfig entityConfig() {
        return entityConfig;
    }
    public ObjConfig ObjConfig() {
        return ObjConfig;
    }
    public UIConfig UIConfig() {return UIConfig;}
    public String MAP_PATH() {return MAP_PATH;}
    public String TILESET_PATH() {return TILESET_PATH;}
    public String TILESET_IMG_PATH() {
        Element imageElement = (Element) tilesetDoc
                .getDocumentElement()
                .getElementsByTagName("image")
                .item(0);

        return imageElement.getAttribute("source");
    }
    public Document mapDoc(){return mapDoc;};
    public Document tilesetDoc(){return tilesetDoc;}
}
