@startuml

left to right direction
skinparam packageStyle rectangle

package "main" {
    class Main
}

package "model" {
    class GameModel
    class Player
    class Enemy
    class GameConfig
}

package "view" {
    class GameView
    class HUD
}

package "controller" {
    class GameController
}

' ======================
' RELAZIONI PRINCIPALI MVC
' ======================

Main --> GameModel
Main --> GameView
Main --> GameController

GameController --> GameModel
GameController --> GameView

GameView --> GameModel

@enduml